# ifj18

./: .gitignore  .scanner.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README  dummy.c  dynamic_string.c  dynamic_string.h  error_handle.c  error_handle.h  execute  expressions_parser.c  expressions_parser.h  factorial.ifjcode18  gen_out.c  gen_out.h  global_interface.c  global_interface.h  grammer.txt  list.c  list.h  main  main.c  rozdeleni  scanner.c  scanner.h  semantic_parser.c  semantic_parser.h  semantic_parser_td.c  stack.c  stack.h  symtable.c  symtable.h  test.c  test.h  test01.ifjcode18  top_down_parser.c  top_down_parser.h  tst.rb  (+1 more)
doc/: dokumentace.tex  prezentacia.tex
generator_example/: Makefile  dummy.c  generator.c  test
lib_functions/: lib_functions.ifj18
test_td/: main  test1  test2
tests/: Makefile  execute_tests.sh  main  test.bash  test.sh  test01  test02  test03  test04  test05  test06  test_outputs.bash  test_valgrind.bash  tests_expressions_parser.c  tst
tests/correct_program_tests/: test01  test02  test03  test04  test05  test07  test08  test09  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test20  test21  test22  test23  test24  test25  test26  test27  test28  test29  test30  test31  test32  test33  test34  test35  test36  test37  test38  test39  test40  test41  (+28 more)
tests/incorrect_program_tests/: test01  test02  test03  test04  test05  test06  test07  test08  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test21  test22  test23  test24  test25  test26  test27  test28  (+37 more)
